reformatted and cleaned up code; made sonarqube adjustments